# envcfg

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
classenv/: __init__.py  decorator.py  types.py
classenv/models/: base_config.py  parsed_config.py  raw_config.py
configdataclass/: __init__.py  decorator.py
configdataclass/models/: __init__.py  base_config.py  parsed_config.py  raw_config.py
envcfg/: __init__.py  decorator.py
envcfg/models/: base_config.py  parsed_config.py  raw_config.py
envconfig/: __init__.py
tests/: conftest.py  test_decorator.py
