[tool.poetry]
name = "classenv"
version = "1.1.0"
description = "Use a decorator to specify environment variables with automatic type parsing!"
authors = ["Dogeek <simon.bordeyne@gmail.com>"]
license = "MIT"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mypy = "^1.14.1"
isort = "^6.0.0"
ruff = "^0.9.4"

[tool.poe.tasks]
add_changelog  = { script = "scripts.add_changelog:main" }

[tool.poetry.dev-dependencies]
pylama = "^8.3.7"
requests = "^2.27.1"
poethepoet = "^0.12.2"
toml = "^0.10.2"
tbump = "^6.7.0"
sphinx = '*'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/Dogeek/envconfig/"

[tool.tbump.version]
current = "1.0.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "[version] Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "envcfg/__init__.py"

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "add-changelog"
cmd = "poetry run poe add_changelog {new_version}"

[[tool.tbump.after_push]]
name = "publish"
cmd = "poetry publish --build"

[tool.changelog.tag_mapping]
fix = "Bugfixes"
feat = "New features"
san = "Refactorings"
add = "New features"
mod = "Modifications"
